fixed overflow bug

--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -351,5 +351,9 @@ Sidebar
 }
 
 .modal-body{
-  padding: 20px 20px 10px 20px;
+  padding: 20px 20px 10px 20px;  # reduces the default paddings
+}
+
+.modal{
+  overflow: hidden;
 }
